dataset1235/2025-2/2947369575/users/2558997302/executions/1003782500_2819779400.log
== RUN (2025-08-27 18:53:14)
-- CODE: 
qtd=int(input())
valor_uni=float(input())
frete=float(input())
total=qtd*valor_uni+frete
print(f'{total:.1f}')

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
1642.5
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
540.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
162.6
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 18:53:52)
-- CODE: 
qtd=int(input())
valor_uni=float(input())
frete=float(input())
total=qtd*valor_uni+frete
print(f'{total:.1f}')

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
1642.5
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
540.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
162.6
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 18:53:05)
-- CODE: 
qtd=int(input())
valor_uni=float(input())
frete=float(input())
total=qtd*valor_uni+frete
print(f'{total:.1f}}')

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 5
    print(f'{total:.1f}}')
                         ^
SyntaxError: f-string: single '}' is not allowed
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 5
    print(f'{total:.1f}}')
                         ^
SyntaxError: f-string: single '}' is not allowed
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 5
    print(f'{total:.1f}}')
                         ^
SyntaxError: f-string: single '}' is not allowed
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 5
    print(f'{total:.1f}}')
                         ^
SyntaxError: f-string: single '}' is not allowed
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 5
    print(f'{total:.1f}}')
                         ^
SyntaxError: f-string: single '}' is not allowed
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 5
    print(f'{total:.1f}}')
                         ^
SyntaxError: f-string: single '}' is not allowed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
